# personalWebsite

./: .env  .gitignore  LICENSE.txt  Pipfile  README.md  config.py  main.py  noxfile.py  pyproject.toml
app/: __init__.py
migrations/versions/: 0f47f8f94dec_posts_table.py  18ac31ba244a_users_table.py  3d21ebc6f635_add_to_user_model.py  43ee88f5128e_.py
znd4/: __init__.py  forms.py  models.py  routes.py
znd4/templates/: base.html  blog.html  index.html  login.html  register.html  resume.html  user.html
znd4/tests/: test_models.py
