[tool.poetry]
name = "znd4"
version = "0.1.0"
description = "Zane's personal website"
authors = ["Zane Dufour <zane.dufour@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
flask = "^1.0"
markdown = "^3.1"
flask-wtf = "^0.14.2"
python-dotenv = "^0.10.1"

[tool.poetry.dev-dependencies]
autopep8 = "^1.4"
pylint = "^2.3"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
