[tool.poetry]
name = "personalwebsite"
version = "0.1.0"
description = "Zane's personal website"
authors = ["Zane Dufour"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
flask = "^1.1.1"
markdown = "^3.2.1"
flask-wtf = "^0.14.3"


[tool.tox]
legacy_tox_ini = """
[tox]
envlist = py38

[testenv]
whitelist_externals = poetry
isolated_build = true
commands = 
    poetry install
    black --check
    pylint
    pytest
"""


[tool.poetry.dev-dependencies]
pylint = "^2.4.4"
pytest = "^5.4.1"
black = "^19.10b0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
