[tool.poetry]
name = "znd4"
version = "0.1.0"
description = "Zane's personal website"
authors = ["Zane Dufour"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
flask = "^1.1.1"
markdown = "^3.2.1"
flask-wtf = "^0.14.3"
nox = "^2019.11.9"
python-dotenv = "^0.12.0"
flask-sqlalchemy = "^2.4.1"
flask-migrate = "^2.5.3"
flask-login = "^0.5.0"

[tool.pylint]


[tool.tox]
legacy_tox_ini = """
[tox]
envlist = py38
isolated_build = true

[tox:.package]
# note tox will use the same python version as under what tox is installed to package
# so unless this is python 3 you can require a given python version for the packaging
# environment via the basepython key
basepython = python3

[testenv]
whitelist_externals = poetry
skipsdist = true
commands = 
    poetry install
    poetry run black --check
    poetry run pylint
    poetry run pytest
"""


[tool.poetry.dev-dependencies]
pylint = "^2.4.4"
pytest = "^5.4.1"
black = "^19.10b0"
pylint-flask = "^0.6"
flask-shell-ipython = "^0.4.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
